Avoid .isBlank.